# tana-connector

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  mcp_server.py  pyproject.toml  pytest.ini  start.sh
app/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  logging.py  main.py
app/mcp/: __init__.py  default_templates.py  formatters.py  schemas.py  server.py  service_factory.py  tools.py
app/models/: __init__.py  filters.py  query_params.py  responses.py  shared.py
app/routers/: __init__.py  events.py  health.py
app/routers/dependencies/: __init__.py  events_params.py
app/routers/graph/: __init__.py  availability.py  calendar.py  mail.py
app/services/: __init__.py  auth_service.py  availability_service.py  calendar_service.py  delta_cache_service.py  events_service.py  graph_service.py  mail_service.py  template_service.py
app/utils/: __init__.py  attendee_utils.py  date_utils.py  description_utils.py  filter_utils.py  tana_formatter.py  timezone_utils.py
docs/: PROJECT_STRUCTURE.md
scripts/swiftbar/: tana-connector.sh  tana-start-background.sh  tana-stop.sh
tests/: README.md  __init__.py  conftest.py  test_api_endpoints.py  test_auth_service.py  test_date_utils.py  test_events_service.py  test_graph_service.py  test_tana_formatter.py
tests/fixtures/: __init__.py  factories.py
tests/integration/api/: test_availability.py  test_calendar_view.py  test_events_errors.py  test_events_json.py  test_events_post.py  test_events_query_params.py  test_events_tana.py  (+2 more)
tests/unit/: test_exceptions.py
(+15 files in other folders)
