[project]
name = "tana-connector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "msal>=1.34.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.36.1",
    "msgraph-sdk>=1.0.0",
    "azure-identity>=1.19.0",
]
